[gd_scene load_steps=10 format=3 uid="uid://bi3mac4aqpu4n"]

[ext_resource type="Script" path="res://Scripts/Ui/Title.gd" id="1_itf81"]
[ext_resource type="Texture2D" uid="uid://sg68u83vfl5e" path="res://Textures/background.png" id="2_bnwam"]
[ext_resource type="Texture2D" uid="uid://du31ku7lfm6kn" path="res://Textures/start.png" id="3_rubr3"]
[ext_resource type="Texture2D" uid="uid://be4qbg3jaijko" path="res://Textures/start_clicked.png" id="4_7lo1s"]
[ext_resource type="BankAsset" uid="uid://37h1v2wmhhvs" path="res://addons/FMOD/editor/resources/banks/{f93d27d8-c724-4ab3-8e95-d1b29ddf5674}.tres" id="5_egrq6"]
[ext_resource type="BankAsset" uid="uid://cg6xg5lu1rf3h" path="res://addons/FMOD/editor/resources/banks/{6120070c-b65f-06f1-08dc-5b4c6c2c50ec}.tres" id="6_520vg"]
[ext_resource type="BankAsset" uid="uid://caa1cjsjnmqbe" path="res://addons/FMOD/editor/resources/banks/{0df20c02-bad7-4644-917e-b3936bf1fe32}.tres" id="7_5yrf8"]
[ext_resource type="EventAsset" uid="uid://c2cgpe26eeob3" path="res://addons/FMOD/editor/resources/events/{9318af8b-cd8d-4c71-bed1-ab24aafd2753}.tres" id="8_ghfmm"]

[sub_resource type="Theme" id="Theme_iw7e8"]
default_font_size = 24

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_itf81")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bnwam")
expand_mode = 2

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -556.0
offset_top = -245.0
offset_right = -48.0
offset_bottom = -36.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("3_rubr3")
texture_hover = ExtResource("4_7lo1s")

[node name="Intro" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.709804)

[node name="Label" type="Label" parent="Intro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.5
offset_top = -270.0
offset_right = 344.5
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_iw7e8")
text = "Though your cover was blown by an enemy drone 
during Operation \"I Spy,\" the mission isn't over! 
With minimal bullets left in your chamber, you must 
now stealthily fight your way through enemy 
headquarters and escape with the asset.
Good luck, agent.

WASD to move
E to interact
Click to shoot
"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Intro/Label"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -50.0
offset_right = 79.0
grow_horizontal = 2
grow_vertical = 0
text = "Kick Butt"

[node name="BlackRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="MasterBankLoader" type="StudioBankLoader" parent="."]
load_on = 1
num_banks = 2
bank_0 = ExtResource("5_egrq6")
bank_1 = ExtResource("6_520vg")

[node name="TitleBankLoader" type="StudioBankLoader" parent="."]
load_on = 1
unload_on = 3
num_banks = 1
bank_0 = ExtResource("7_5yrf8")

[node name="TitleEventEmitter2D" type="StudioEventEmitter2D" parent="."]
play_event = 1
stop_event = 3
event = ExtResource("8_ghfmm")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Intro/Label/Button" to="." method="_on_button_pressed"]
